A few tweaks and bug fixes. Made avatars always-a-bit-transparent but also disabled pointer events so that they don't interfere with clicking any more. Also removed console.log from avatar_jump.svg...
Added contextual case normalization to the hints menu.

Fixed bug where a word using only backpack tiles would draw a phantom
highlight in the upper-left.

-Peter Mawhorter

--- a/css/main.css
+++ b/css/main.css
@@ -288,10 +288,13 @@ details.menu[open] summary .losed {
 
 .avatar {
     position: absolute;
+    pointer-events: none;
+    opacity: 0.75; /* TODO: work on avatar placement */
 }
 
+/* TODO: Get rid of this? No effect since pointer events are off */
 .avatar:hover {
-    opacity: 0;
+    opacity: 0.5;
 }
 
 .slot {
